This page is built by Astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,5 +27,7 @@ import icon from '../images/icon.png'
       <Item title="EchoSpin CS" genre="アクセサリー" url="https://booth.pm/ja/items/5004718" comment="すき。ほしい。"/>
       <Item title="うまい棒" genre="たべもの" url="どこでもうってる" comment="リアルであったら餌付けするといいかも" />
     </ul>
+
+    <p class="text-center">This page is built by <a href="https://astro.build" class="text-blue-400">Astro</a><p>
 	</body>
 </html>
