--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import icon from '../images/icon.png'
 		  <h1 class="text-4xl font-bold">Wishlist</h1>
     </div>
     
+    <h1 class="text-center text-4xl font-normal">ぶっちゃけ<a href="https://booth.pm/wish_list_names/dOWTbGad" class="font-bold">こっち</a>でいい</h1>
     <ul class="grid grid-cols-1 sm:grid-cols-2"> 
       <Item title="【オリジナル3Dモデル】セフィラ（Sephira）◆アッシュ共通素体" genre="アバター" url="https://booth.pm/ja/items/2953001" />
       <Item title="【VRChat向け3Dモデル】ルギネア(RUGINEA)" genre="アバター" url="https://booth.pm/ja/items/3910335" comment="高いね…送りつけられたら飛び跳ねて天井を破壊します" />
